# flutter_audio_crash

./: README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/flutter_audio_crash/: FlutterAudioCrashPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_audio_crash_example/: MainActivity.kt
example/assets/: tian.m4a
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_audio_crash.podspec
ios/Classes/: FlutterAudioCrashPlugin.h  FlutterAudioCrashPlugin.m  SwiftFlutterAudioCrashPlugin.swift  audio_crash.cc
lib/: flutter_audio_crash.dart  isolate.dart
test/: flutter_audio_crash_test.dart
